Continued work on GUI chart support for spectra plot